--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     </div>
 
                     <div class="j6__content">
-                        <img src="assets/img/doorS3.jpg" alt="" class="j6__img">
+                        <img src="assets/img/doors3.jpg" alt="" class="j6__img">
                         <h3 class="j6__title">Door</h3>
                         <span class="j6__subtitle">Book Now</span>
                         <span class="j6__price">PHP 10,000.00</span>
